# nxt

./: .gitignore  .hgignore  NXT.cabal  stack.yaml
ffi/: blue.c  blue.h  initserial.c  initserial.h
lib/: BluetoothUtils.hs  Capture.hs  CaptureTypes.hs  CaptureUtils.hs  Compass.hs  Data.hs  Errors.hs  NXT.hs  NXTCompass.hs  NXTData.hs  NXTErrors.hs  NXTTypes.hs  NXTUltrasonicSensor.hs  Remote.hs  Types.hs  UltrasonicSensor.hs  blue.c  blue.h
lib/Robotics/: NXT.hs
lib/Robotics/NXT/: BluetoothUtils.hs  Compass.hs  Data.hs  Errors.hs  Externals.hs  Internals.hs  MotorControl.hs  Protocol.hs  Remote.hs  Types.hs  UltrasonicSensor.hs
lib/Robotics/NXT/Sensor/: Compass.hs  Ultrasonic.hs
remote/: remote.nxc  remote.rxe
src/: Shutdown.hs  Status.hs  UploadFile.hs  UploadFiles.hs
test/: Main.hs
test/Robotics/NXT/: Basic.hs
tests/: Main.hs
tests/Robotics/NXT/: Basic.hs
