Name:                NXT
Version:             0.1
Synopsis:            A Haskell interface to Lego Mindstorms NXT over Bluetoooth
Description:         A Haskell interface to Lego Mindstorms NXT over Bluetoooth. It supports direct commands, messages and
                     many sensors (also unofficial). It has also support for a simple message-based control of a brick via
                     remotely executed program (basic NXC code included).
                     .
                     Feel free to contribute additional features and interfaces for more sensors.
                     .
                     It contains two simple programs: @nxt-upload@ for uploading files to NXT brick and @nxt-shutdown@ for
                     remote shutdown of NXT brick. Feel free to propose or write other (example) programs.
License:             LGPL-3
License-file:        LICENSE
Author:              Mitar Milutinovic
Maintainer:          mitar.haskell@tnode.com
Copyright:           (c) 2010 Mitar Milutinovic
Category:            Robotics
Build-type:          Simple
Cabal-version:       >= 1.8
Stability:           experimental
Homepage:            http://mitar.tnode.com

Library
  Exposed-modules:     Robotics.NXT,
                       Robotics.NXT.Compass,
                       Robotics.NXT.UltrasonicSensor,
                       Robotics.NXT.Remote
  Build-depends:       base >= 4 && < 5,
                       mtl >= 1.1 && < 2,
                       bytestring >= 0.9 && < 1,
                       unix >= 2.4 && < 3,
                       time >= 1.1 && < 2
  Other-modules:       Robotics.NXT.BluetoothUtils,
                       Robotics.NXT.Data,
                       Robotics.NXT.Errors,
                       Robotics.NXT.Protocol,
                       Robotics.NXT.Types
  Hs-source-dirs:      lib
  C-sources:           ffi/blue.c,
                       ffi/initserial.c
  Includes:            ffi/blue.h,
                       ffi/initserial.h

Executable nxt-shutdown
  Main-is:             Shutdown.hs
  Hs-source-dirs:      src
  Build-depends:       base >= 4 && < 5,
                       mtl >= 1.1 && < 2,
                       NXT == 0.1

Executable nxt-upload
  Main-is:             UploadFiles.hs
  Hs-source-dirs:      src
  Build-depends:       base >= 4 && < 5,
                       mtl >= 1.1 && < 2,
                       filepath >= 1.1 && < 2,
                       NXT == 0.1
