Name:                NXT
Version:             0.1.9
Synopsis:            A Haskell interface to Lego Mindstorms NXT
Description:         A Haskell interface to Lego Mindstorms NXT over Bluetoooth. It supports direct commands, messages and
                     many sensors (also unofficial). It has also support for a simple message-based control of a NXT brick
                     via remotely executed program (basic NXC code included).
                     .
                     It contains two simple programs: @nxt-upload@ for uploading files to a NXT brick and @nxt-shutdown@ for
                     remote shutdown of a NXT brick.
                     .
                     It should work on Linux, MacOs and Windows.
                     .
                     Feel free to contribute additional features, interfaces for more sensors and propose or write other
                     (example) programs.
License:             LGPL-3
License-file:        LICENSE
Author:              Mitar Milutinovic
Maintainer:          mitar.haskell@tnode.com
Copyright:           (c) 2010 Mitar Milutinovic
Category:            Robotics
Build-type:          Simple
Cabal-version:       >= 1.8
Stability:           experimental
Homepage:            http://mitar.tnode.com
Extra-source-files:  remote/remote.rxe,
                     remote/remote.nxc,
                     ffi/blue.h,
                     ffi/initserial.h

Library
  Exposed-modules:     Robotics.NXT,
                       Robotics.NXT.MotorControl,
                       Robotics.NXT.Remote,
                       Robotics.NXT.Sensor.Compass,
                       Robotics.NXT.Sensor.Ultrasonic
  Build-depends:       base >= 4.3 && < 5,
                       mtl >= 1.1 && < 3,
                       bytestring >= 0.9 && < 1,
                       time >= 1.1 && < 2,
                       serialport,
                       transformers
  Other-modules:       Robotics.NXT.Data,
                       Robotics.NXT.Errors,
                       Robotics.NXT.Protocol,
                       Robotics.NXT.Types,
                       Robotics.NXT.Internals,
                       Robotics.NXT.Externals,
                       Robotics.NXT.BluetoothUtils
  HS-source-dirs:      lib
  GHC-options:         -Wall
  GHC-prof-options:    -Wall
  GHC-shared-options:  -Wall

  if os(linux)
    Build-depends:  unix >= 2.4 && < 3

  if os(linux)
    C-sources:        ffi/blue.c,
                         ffi/initserial.c
    Includes:         ffi/blue.h,
                         ffi/initserial.h
    Extra-libraries:  bluetooth

Source-repository head
  type:      mercurial
  location:  https://bitbucket.org/mitar/nxt

Executable nxt-shutdown
  Main-is:         Shutdown.hs
  HS-source-dirs:  src
  Build-depends:   base >= 4.3 && < 5,
                       mtl >= 1.1 && < 3,
                       NXT,
                       transformers,
                       serialport
  GHC-options:     -Wall

Executable nxt-upload
  Main-is:         UploadFiles.hs
  HS-source-dirs:  src
  Build-depends:   base >= 4.3 && < 5,
                       mtl >= 1.1 && < 3,
                       bytestring >= 0.9 && < 1,
                       filepath >= 1.1 && < 2,
                       NXT,
                       transformers,
                       serialport
  GHC-options:     -Wall


Test-suite NXTTests
  Type:            exitcode-stdio-1.0
  x-uses-tf:       true
  Build-depends:   base >= 4,
                   HUnit >= 1.2 && < 2,
                   QuickCheck >= 2.4,
                   test-framework >= 0.4.1,
                   test-framework-quickcheck2,
                   test-framework-hunit,
                   NXT,
                   transformers,
                   serialport,
                   mtl
  GHC-options:     -Wall -rtsopts
  HS-source-dirs:  test
  Main-is:         Main.hs
  Other-modules:   Robotics.NXT.Basic


